--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
     "layer0:dev": "layer0 dev",
     "layer0:build": "layer0 build",
     "layer0:deploy": "layer0 deploy",
+    "deploy": "layer0 deploy",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
-  "name": "nuxt-isg-example",
+  "name": "layer0-nuxt-isg-example",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@nuxt/core": "^2.15.3"
+    "@nuxt/core": "^2.15.3",
+    "express": "^4.17.1",
+    "rss-to-json": "^2.0.2"
   },
   "devDependencies": {
-    "@layer0/cli": "^3.4.0",
-    "@layer0/core": "^3.4.0",
-    "@layer0/devtools": "^3.4.0",
-    "@layer0/nuxt": "^3.4.0",
-    "@layer0/prefetch": "^3.4.0",
-    "@layer0/vue": "^3.4.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
+    "@layer0/cli": "^4.5.1",
+    "@layer0/core": "^4.5.1",
+    "@layer0/devtools": "^4.5.1",
+    "@layer0/nuxt": "^4.5.1",
+    "@layer0/prefetch": "^4.5.1",
+    "@layer0/vue": "^4.5.1",
+    "@nuxtjs/tailwindcss": "^4.0.1",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "fs-cheerio": "^3.0.0",
+    "nuxt": "^2.15.3",
+    "postcss": "^8.2.8",
+    "prettier": "^2.3.2"
   }
 }
